--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 
 <!-- Special Dishes Section -->
-<!-- <section id="gtco-special-dishes" class="bg-grey section-padding">
+<section id="gtco-special-dishes" class="bg-grey section-padding">
     <div class="container">
         <div class="section-content">
             <div class="heading-section text-center">
@@ -261,8 +261,8 @@
             </div>
         </div>
     </div>
-</section>  -->
- <!--End of Special Dishes Section -->		
+</section> 
+ <!--End of Special Dishes Section		 -->
 
 
 <!-- Menu Section -->
@@ -451,7 +451,7 @@
 
 
 <!-- Testimonial Section-->
-<!-- <section id="gtco-testimonial" class="overlay bg-fixed section-padding" style="background-image: url(img/testi-bg.jpg);">
+ <section id="gtco-testimonial" class="overlay bg-fixed section-padding" style="background-image: url(img/testi-bg.jpg);">
     <div class="container">
         <div class="section-content">
             <div class="heading-section text-center">
@@ -463,7 +463,7 @@
                 </h2>
             </div>
             <div class="row">
-              <!--  Testimonial
+              <!--  Testimonial -->
                 <div class="testi-content testi-carousel owl-carousel">
                     <div class="testi-item">
                         <i class="testi-icon fa fa-3x fa-quote-left"></i>
@@ -479,10 +479,10 @@
                     </div>
                 </div>
                 <!-- End of Testimonial -->
-            <!-- </div>
+             </div>
         </div>
-    </div> -->
-<!-- </section> -->
+    </div> 
+ </section> 
 <!-- End of Testimonial Section-->	
 
 
@@ -600,7 +600,7 @@
 
 
 <!-- Reservation Section -->
-<!-- <section id="gtco-reservation" class="bg-fixed bg-white section-padding overlay" style="background-image: url(img/reservation-bg.jpg);">
+<section id="gtco-reservation" class="bg-fixed bg-white mt-5 overlay" style="background-image: url(img/reservation-bg.jpg);">
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
@@ -670,10 +670,10 @@
         </div>
         
     </div>
-</section> -->
+</section>
 <!-- End of Reservation Section -->		
 
-<!-- <footer class="mastfoot pb-5 bg-white section-padding pb-0">
+ <footer class="mastfoot pb-5 bg-white section-padding pb-0">
     <div class="inner container">
          <div class="row">
          	<div class="col-lg-4">
@@ -731,7 +731,7 @@
     </div>
 </footer>
 </div>
-</div>  -->
+</div>  
 
 
 	<!-- External JS -->
