--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg">
+  <nav class=" navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img src="../20231118_000550_0000-transformed.png" alt="" style="height: 90px; width: 120px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,27 +24,42 @@
     </div>
   </nav>      
 
+  
+  <!-- header -->
  <div class="row w-100 container-fluid m-auto" style="">
-  <div class="bg-success" style="height: 70vh; width: 50%; ">
-    <button class="btn"><a href="./resturant.html"></a>go to resturant</button>
+  <div class="d-flex" style="  flex-direction: column; align-items: center; justify-content: center; height: 70vh; width: 50%; background-image: url(./images9.jpeg); ">
+    <h1>header text</h1>
+    <p>small text</p>
+    <a class="bg-success" style="width: max-content;" href="./resturant.html"><button class="btn">go to resturant</button></a>
   </div>
-  <div class="bg-secondary " style="height: 70vh; width: 50%; ">
-    <button class="btn">go to cullinary school</button>
-  </div>
+  <div class="d-flex" style=" flex-direction: column; align-items: center; justify-content: center; height: 70vh; width:50%; background-image: url(./images\ \(8\).jpeg); background-repeat: repeat-y; ">
+      <h1 class="">header text</h1>
+      <p class="">small text</p>
+      <a class="bg-primary" style="width: max-content;" href="./resturant.html"><button class="btn">go to cullinary school</button></a>
+    </div>
  </div>
+<!-- end of header -->
 
- <div class="mt-5 card text-center">
+
+ <!-- body -->
+
+<!-- end of body -->
+
+
+<!-- footer -->
+ <div class="mt-5 bg-success card text-center">
   <div class="card-header">
     Featured
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">OKIN</h5>
+    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam odio volupt</p>
+    <a href="#" class="btn btn-primary">Click</a>
   </div>
   <div class="card-footer text-body-secondary">
-    2 days ago
+&copy; Okin 2023
   </div>
 </div>
+<!-- end of footer -->
 </body>
 </html>
