--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <nav class=" navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../20231118_000550_0000-transformed.png" alt="" style="height: 90px; width: 120px;"></a>
+      <a class="navbar-brand" href="#"><img src="./20231118_000550_0000-transformed.png" alt="" style="height: 90px; width: 120px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
