--- a/index.html
+++ b/index.html
@@ -6,60 +6,348 @@
     <title>Okinmainpage</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.min.css">
+  </head>
+<body style="background-color: white;" !important>
   <nav class=" navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="./20231118_000550_0000-transformed.png" alt="" style="height: 90px; width: 120px;"></a>
+      <a class="navbar-brand" href="#"><img src="./20231118_000550_0000-transformed.png" alt="" style="height: 150px; width: 150px;"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
           <a class="nav-link" href="#">Pricing</a>        
         </div>
       </div>
     </div>
   </nav>      
 
-  
-  <!-- header -->
- <div class="row w-100 container-fluid m-auto" style="">
-  <div class="d-flex" style="  flex-direction: column; align-items: center; justify-content: center; height: 70vh; width: 50%; background-image: url(./images9.jpeg); ">
-    <h1>header text</h1>
-    <p>small text</p>
-    <a class="bg-success" style="width: max-content;" href="./resturant.html"><button class="btn">go to resturant</button></a>
+   <!-- header -->
+ <div class="row w-100 container-fluid mx-auto" style="">
+  <div class="d-flex" style="  flex-direction: column; align-items: center; justify-content: center; height: 60vh; width: 50%; background-color: rgb(125, 248, 125); ">
+    <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; text-shadow: 2px 2px green;">OKIN CUISINE RESTURANT</h3>
+    <p style="font-family: cursive ;">Want to evoke old memories of African foods?</p>
+    <a href="./resturant.html"><button style="width: max-content; text-decoration: none; font-size: smaller;" class="btn bg-success go-to-button">resturant</button></a> 
   </div>
-  <div class="d-flex" style=" flex-direction: column; align-items: center; justify-content: center; height: 70vh; width:50%; background-image: url(./images\ \(8\).jpeg); background-repeat: repeat-y; ">
-      <h1 class="">header text</h1>
-      <p class="">small text</p>
-      <a class="bg-primary" style="width: max-content;" href="./resturant.html"><button class="btn">go to cullinary school</button></a>
+  <div class="d-flex" style=" flex-direction: column; align-items: center; justify-content: center; height: 60vh; width:50%; background-color: rgb(160, 241, 255);">
+      <h3 class="" style="font-family: fantasy;">OKIN CULLINARY SCHOOL</h3>
+      <p class="" style="font-family: cursive ;">Achieve the dream of becoming an expert cook</p>
+      <a href=""><button  style="width: max-content;" class="btn bg-primary">school</button></a>
     </div>
  </div>
 <!-- end of header -->
 
-
- <!-- body -->
-
-<!-- end of body -->
-
-
-<!-- footer -->
- <div class="mt-5 bg-success card text-center">
-  <div class="card-header">
-    Featured
+<section class=" mt-5 layout_padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10 col-lg-9 mx-auto">
+        <div class="img-box w-100">
+          <img src="./img/images (25).jpeg" alt="" class="w-100">
+        </div>
+      </div>
+    </div>
+    <div class="detail-box">
+      <h2 class="text-center">
+        About <span style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: green; text-shadow: 2px 2px black;">OKIN</span>
+      </h2>
+      <p>
+       <center><i> Okin brand offers a seamless online food ordering platform, We believe in making the process of ordering food both quick and enjoyable because we understand that indulging in good food is a pleasure. <br>
+        <a href="./resturant.html"><button class="bg-success">learn more</button></a> <br> <br>
+     <span style="font-weight: bold;">Okin Cullinary school</span> is another establishment of the Okin brand that was created with the sole purpose of teaching everyone of all age brackets and gender the the skills of cuisine expertise. <br>     
+     <a href=""><button class="bg-primary">learn more</button></a>
+      </p>
+    </i></center>
+    </div>
   </div>
-  <div class="card-body">
-    <h5 class="card-title">OKIN</h5>
-    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam odio volupt</p>
-    <a href="#" class="btn btn-primary">Click</a>
+</section>
+
+<!-- qualities of okin section -->
+<div class="row mt-5">
+  <div>
+    <h3 class="text-center mt-2" style=" font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">What We Are Known For:</h3>
   </div>
-  <div class="card-footer text-body-secondary">
-&copy; Okin 2023
+  <div class="card mt-2 mx-auto" style="width: 18rem;">
+    <img src="./img/images (26).jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">QUALITY SERVICES</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/360_F_641160511_VXhc532jUTJ9A0HvN3BuELpABnidnlGc.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">AFFORDABLE</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/images (7).png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">CUSTOMERS SATISFACTION</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/12447188.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">CONSISTENCY</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/images (27).jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">UNIQUENESS</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/images (28).jpeg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">TRUST-WORTHY</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/images (6).png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">AVAILABILTY</h5>
+    </div>
+  </div>
+  <div class="card mt-4 mx-auto" style="width: 18rem;">
+    <img src="./img/10745274.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-text">EXPERIENCE</h5>
+    </div>
   </div>
 </div>
+<!-- end of qualities of okin section -->
+
+	<!-- Team Section -->
+  <section id="gtco-team" class="bg-white section-padding mt-5">
+    <div class="container">
+        <div class="section-content">
+            <div class="heading-section text-center">
+                <span class="subheading">
+                    Specialties
+                </span>
+                <h2>
+                    Our Team
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="team-card mb-5">
+                        <img class="img-fluid" src="./img/1700777353967.jpg" alt="">
+                        <div class="team-desc">
+                            <h4 class="mb-0">Mr. Michael Iyanro</h4>
+                            <p class="mb-1">CEO</p>
+                            <ul class="list-inline mb-0 team-social-links">
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-google-plus-g"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="team-card mb-5">
+                        <img class="img-fluid" src="./img/IMG_20210707_164104.jpg" alt="">
+                        <div class="team-desc">
+                            <h4 class="mb-0">Mr. Fakunle Ayomiposi</h4>
+                            <p class="mb-1">Site Developer</p>
+                            <ul class="list-inline mb-0 team-social-links">
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-google-plus-g"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="team-card mb-5">
+                        <img class="img-fluid" src="./img/IMG_20210526_155250.jpg" alt="">
+                        <div class="team-desc">
+                            <h4 class="mb-0">Mr Fakunle Ayomiposi</h4>
+                            <p class="mb-1">Site Developer</p>
+                            <ul class="list-inline mb-0 team-social-links">
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="#">
+                                        <i class="fab fa-google-plus-g"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- End of Team Section -->
+
+<!-- faq -->
+<div class=" mt-5 container-fluid" style="background-color:  rgb(125, 248, 125);;">
+<center><h1>FREQUENTLY ASKED QUEUSTIONS</h1></center>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      How do I order? 
+    </h3>
+    <p>
+      Order via our Kitchen page at [address]. You will need an account to place orders online. To create an account, select the 'Sign up/Login' button located at the top of our Kitchen page and enter your details. Once you have signed up, you will receive our new menu via email from us each week. You can unsubscribe at any time.
+    </p>
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      When can I order? 
+    </h3>
+    <p>
+      Our menu is open for orders from 8am Wednesday to 11pm Friday each week. Closing our menu each week gives us time to source the highest-quality ingredients for your meals, then prepare and cook each item from scratch. 
+    </p>
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      When will I receive my order?
+    </h3>
+    <p>
+      Mondays. Pick up is between 4-6pm and delivery is from 4-7pm. 
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      Is there a fee for delivery?
+    </h3>
+    <p>
+      Delivery is free for orders over $150. If your order is under $150, we charge a small $10 delivery fee.
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      Can I choose my delivery time?
+    </h3>
+    <p>
+      Unfortunately, we are unable to accommodate specific delivery time requests at the moment. Our delivery window is from 4-7pm every Monday. We do give you a heads up on when your delivery will arrive - you will receive a text when our driver is on his way. 
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      How much does each certificate cost?
+    </h3>
+    <p>
+      Estimated certificate costs are based on in-state tuition (costs include books, uniform, and supplies):
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      Do I need any previous cooking or work experience to enroll?
+    </h3>
+    <p>
+      The curriculum in these programs is designed to accommodate the novice cook as well as individuals with some cooking experience.
+  </div>
+  <div class="detail-box container mt-4">
+    <h3 style="font-family: Georgia, 'Times New Roman', Times, serif; color: darkblue;">
+      Will I be a chef when I finish my Culinary Arts or Baking and Pastry Certificate?
+    </h3>
+    <p>
+      We are training professionals for entry-level jobs in the food service industry. You must work your way up the career ladder in the industry to become a chef.
+  </div>
+</div>
+<!-- end of faq -->
+
+<!-- footer -->
+<footer class="mastfoot pb-5 bg-white section-padding pb-0 mt-5">
+  <div class="inner container">
+       <div class="row">
+         <div class="col-lg-4">
+           <div class="footer-widget pr-lg-5 pr-0">
+                  <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: green; text-shadow: 4px 2px black;">OKIN</h1>
+             <!-- <img src="./1700066634608-transformed.png.jpg" class="img-fluid footer-logo mb-3" alt=""> -->
+                   <!-- <p>Always ready to serve you with a variety of healthy African street meals that leave your taste buds wanting more.</p> -->
+             <nav class="nav nav-mastfoot justify-content-start">
+                  <a class="nav-link" href="#">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a class="nav-link" href="#">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a class="nav-link" href="#">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+              </nav>
+           </div>
+           
+         </div>
+         <div class="col-lg-4">
+           <div class="footer-widget px-lg-5 px-0">
+             <h4>Open Hours</h4>
+             <ul class="list-unstyled open-hours">
+                  <li class="d-flex justify-content-between"><span>Monday</span><span>8am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Tuesday</span><span>8am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Wednesday</span><span>8am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Thursday</span><span>8am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Friday</span><span>8am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Saturday</span><span>9am - 11pm</span></li>
+                  <li class="d-flex justify-content-between"><span>Sunday</span><span> 10am - 11pm</span></li>
+                </ul>
+           </div>
+           
+         </div>
+
+         <div class="col-lg-4">
+           <div class="footer-widget pl-lg-5 pl-0">
+             <h4 class="mb-3">Customer Care</h4>
+             <form id="newsletter">
+          <div class="form-group">
+            <input type="text" class="form-control" id="emailNewsletter" aria-describedby="emailNewsletter" placeholder="Leave a message..">
+          </div>
+          <button type="submit" class="btn btn-success w-100">Send</button>
+        </form>
+           </div>
+         </div>
+      </div>
+  </div>
+</footer>
 <!-- end of footer -->
 </body>
 </html>
