--- a/resturant.html
+++ b/resturant.html
@@ -148,13 +148,13 @@
 	    <div class="col-lg-6 hero-right">
 	    	<div class="owl-carousel owl-theme hero-carousel">
 			    <div class="item">
-			    	<img class="img-fluid" src="img/hero-1.jpg" alt="">
+			    	<img class="img-fluid" src="./img/images (31).jpeg" alt="">
 			    </div>
 			    <div class="item">
-			    	<img class="img-fluid" src="./images9.jpeg" alt="">
+			    	<img class="img-fluid" src="./img/images (30).jpeg" alt="">
 			    </div>
 			    <div class="item">
-			    	<img class="img-fluid" src="img/hero-1.jpg" alt="">
+			    	<img class="img-fluid" src="./img/images (35).jpeg" alt="">
 			    </div>
 			</div>
 	    </div>
@@ -167,36 +167,36 @@
     <div class="container">
         <div class="section-content">
             <div class="row">
-                <div class="col-sm-5 img-bg d-flex shadow align-items-center justify-content-center justify-content-md-end img-2" style="background-image: url(./img/hero-3.jpg);">                    
+                <div class="col-sm-5 img-bg d-flex shadow align-items-center justify-content-center justify-content-md-end img-2" style="background-image: url(./img/images\ \(20\).jpeg);">                    
                 </div>
                 <div class="col-sm-7 py-5 pl-md-0 pl-4">
                     <div class="heading-section pl-lg-5 ml-md-5">
                         <span class="subheading">
                             About
                         </span>
-                        <h2>
+                        <h2 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
                             Welcome to Okin Kitchen and Bakery
                         </h2>
                     </div>
                     <div class="pl-lg-5 ml-md-5">
-                        <p>What would i eat?" is an everyday struggle. <br> <br> With our affordable and specially curated meal plans, we've got the best answers for you. <br> <br>  Explore our wide range of menus perfect for your next event. We flawlessly cater to all events. <br>  <br>Always ready to serve you with a variety of healthy African street meals that leave your taste buds wanting more.</p>
+                        <p style="font-family: cursive;">What would i eat?" is an everyday struggle. <br> <br> With our affordable and specially curated meal plans, we've got the best answers for you. <br> <br>  Explore our wide range of menus perfect for your next event. We flawlessly cater to all events. <br>  <br>Always ready to serve you with a variety of healthy African street meals that leave your taste buds wanting more.</p>
                         <h2 class="mt-5">SPECIAL MEALS</h2>
                         <div class="row">
                             <div class="col-4">
                                 <a href="#" class="thumb-menu" style="color: black;"> 
-                                    <img class="img-fluid img-cover" src="img/hero-1.jpg" />
+                                    <img class="img-fluid img-cover" src="./img/2023-11-12.jpg" />
                                     <h6>Special meal 1</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="#" class="thumb-menu" style="color: black;">
-                                    <img class="img-fluid img-cover" src="img/hero-1.jpg" />
+                                    <img class="img-fluid img-cover" src="./img/2B73C4B0-B2E4-4882-884C-1D33461BC844.jpeg" />
                                     <h6>Special meal 2</h6>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a href="#" class="thumb-menu" style="color: black;">
-                                    <img class="img-fluid img-cover" src="img/hero-1.jpg"/>
+                                    <img class="img-fluid img-cover" src="./img/BC3A7541-ED75-4A33-A915-7A8BD371B646.jpeg"/>
                                     <h6>Special meal 3</h6>
                                 </a>
                             </div>
@@ -699,46 +699,178 @@
 </div>
  <div class="row container m-auto" style="">
   <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
-    <img src="./20231118_000550_0000-transformed.png" class="card-img-top" alt="..." style="height: 32vh;">
+    <img src="./img/images (36).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
     <div class="card-body">
-      <h3 class="card-title" style="font-size: small;">REFILL PACK</h3>
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
       <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
-    <span style="font-weight: 500;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
     </div>
  </div>
 
 <div class="card w-50 ">
-    <img src="./20231118_000550_0000-transformed.png" class="card-img-top" alt="..."  style="height: 32vh;">
+    <img src="./img/images (35).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
     <div class="card-body">
-      <h3 class="card-title" style="font-size: small;">JOMBO PACK</h3>
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
       <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
-      <span style="font-weight: 500;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
     </div>
 </div>
 </div>
 <div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
     <h5 class="m-auto" style="color: white;">RICE</h5>
 </div>
+<div class="row container m-auto" style="">
+    <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+      <img src="./img/images (39).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+      <div class="card-body">
+        <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+        <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+      </div>
+    </div>
+  
+  
+  <div class="card w-50 ">
+      <img src="./img/images (38).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
+      <div class="card-body">
+        <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+        <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+        <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+      </div>
+  </div>
+  </div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">EKURU</h5>
+</div>
  <div class="row container m-auto" style="">
   <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
-    <img src="./20231118_000550_0000-transformed.png" class="card-img-top" alt="..." style="height: 32vh;">
+    <img src="./img/images (41).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
     <div class="card-body">
-      <h3 class="card-title" style="font-size: small;">REFILL PACK</h3>
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
       <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
-    <span style="font-weight: 500;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    </div>
+  </div>
+
+
+<div class="card w-50 ">
+    <img src="./img/images (42).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+    </div>
+</div>
+</div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">MOI-MOI</h5>
+</div>
+ <div class="row container m-auto" style="">
+  <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+    <img src="./img/images (43).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    </div>
+ </div>
+<div class="card w-50 ">
+    <img src="./img/images (44).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+    </div>
+</div>
+ </div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">AKARA</h5>
+</div>
+ <div class="row container m-auto" style="">
+  <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+    <img src="./img/images (46).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    </div>
+  </div>
+<div class="card w-50 ">
+    <img src="./img/images (45).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+    </div>
+</div>
+ </div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">BOLE</h5>
+</div>
+ <div class="row container m-auto" style="">
+  <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+    <img src="./img/images (47).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
     </div>
  </div>
 
 <div class="card w-50 ">
-    <img src="./20231118_000550_0000-transformed.png" class="card-img-top" alt="..."  style="height: 32vh;">
+    <img src="./img/Ijaw_dishes_Bole.jpg" class="card-img-top" alt="..."  style="height: 32vh;">
     <div class="card-body">
-      <h3 class="card-title" style="font-size: small;">JOMBO PACK</h3>
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
       <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
-      <span style="font-weight: 500;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
     </div>
 </div>
 </div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">SOUP</h5>
+</div>
+ <div class="row container m-auto" style="">
+  <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+    <img src="./img/images (50).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    </div>
+ </div>
 
+<div class="card w-50 ">
+    <img src="./img/images (48).jpeg" class="card-img-top" alt="..."  style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+    </div>
+</div>
+ </div>
+<div class="container p-2 mt-5" style="background-color: orange; font-family: Arial, Helvetica, sans-serif;"> 
+    <h5 class="m-auto" style="color: white;">DRINKS</h5>
+</div>
+ <div class="row container m-auto" style="">
+  <div class="card w-50" style="border: 1px solid rgb(165, 236, 165);">
+    <img src="./img/images (52).jpeg" class="card-img-top" alt="..." style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">REFILL PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+    <span style="font-weight: 500; color: green;">#5,000</span>  <a href="#" class="btn bg-success w-5 m-auto" style="color: white;">Buy now</a>
+    </div>
+ </div>
+
+<div class="card w-50 ">
+    <img src="./img/African-Restaurant-in-Lewisham-33.webp" class="card-img-top" alt="..."  style="height: 32vh;">
+    <div class="card-body">
+      <h2 class="card-title" style="font-size: small;">JOMBO PACK</h2>
+      <p class="card-text" style="font-size: smaller;">bread, fish, ponmo, egg, water</p>
+      <span style="font-weight: 500; color: green;">#5,000</span>     <a href="#" class="btn btn-success w-5 m-auto">Buy now</a>
+    </div>
+</div>
+</div>
+<!-- bulk dishes -->
 <section id="gtco-special-dishes" class="bg-grey section-padding">
     <div class="container">
         <div class="section-content">
@@ -761,12 +893,12 @@
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-2 col-md-6 align-self-center mt-4 mt-md-0">
-                    <img src="img/salmon-zucchini.jpg" alt="" class="img-fluid shadow w-100">
+                    <img src="./img/F0Lg3tPWwAAXnkC.jpg_large.jpg" alt="" class="img-fluid shadow w-100">
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col-lg-5 col-md-6 align-self-center order-2 order-md-1 mt-4 mt-md-0">
-                    <img src="./img/hero-1.jpg" alt="" class="img-fluid shadow w-100">
+                    <img src="./img/images (33).jpeg" alt="" class="img-fluid shadow w-100">
                 </div>
                 <div class="col-lg-5 offset-lg-2 col-md-6 align-self-center order-1 order-md-2 py-5">
                     <h2 class="special-number">02.</h2>
@@ -789,14 +921,13 @@
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-2 col-md-6 align-self-center mt-4 mt-md-0">
-                    <img src="./img/hero-3.jpg" alt="" class="img-fluid shadow w-100">
+                    <img src="./img/images (32).jpeg" alt="" class="img-fluid shadow w-100">
                 </div>
             </div>
         </div>
     </div>
 </section> 
-
-
+<!-- end of bulk dishes -->
 
 <!-- Menu Section -->
 <!-- <section id="gtco-menu" class="section-padding">
@@ -984,7 +1115,7 @@
 
 
 <!-- Testimonial Section-->
- <section id="gtco-testimonial" class="overlay bg-fixed section-padding" style="background-image: url(./img/hero-1.jpg);">
+ <section id="gtco-testimonial" class="overlay bg-fixed section-padding" style="background-image: url(./img/2023-11-12\ \(1\).jpg);">
     <div class="container">
         <div class="section-content">
             <div class="heading-section text-center">
@@ -1131,9 +1262,6 @@
 </section> -->
 <!-- End of Team Section -->	
 
-
-
-
  <footer class="mastfoot pb-5 bg-white section-padding pb-0">
     <div class="inner container">
          <div class="row">
@@ -1188,6 +1316,7 @@
 </footer>
 </div>
 </div>  
+ </div>
 
 
 	<!-- External JS -->
