--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
  <div class="row w-100 container-fluid mx-auto" style="">
   <div class="d-flex" style="  flex-direction: column; align-items: center; justify-content: center; height: 60vh; width: 50%; background-color: rgb(125, 248, 125); ">
     <h3 style="font-family: Verdana, Geneva, Tahoma, sans-serif; text-shadow: 2px 2px green;">OKIN CUISINE RESTURANT</h3>
-    <p style="font-family: cursive ;">Want to evoke old memories of African foods?</p>
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif ;">Want to evoke old memories of African foods?</p>
     <a href="./resturant.html"><button style="width: max-content; text-decoration: none; font-size: smaller;" class="btn bg-success go-to-button">resturant</button></a> 
   </div>
   <div class="d-flex" style=" flex-direction: column; align-items: center; justify-content: center; height: 60vh; width:50%; background-color: rgb(160, 241, 255);">
       <h3 class="" style="font-family: fantasy;">OKIN CULLINARY SCHOOL</h3>
-      <p class="" style="font-family: cursive ;">Achieve the dream of becoming an expert cook</p>
-      <a href=""><button  style="width: max-content;" class="btn bg-primary">school</button></a>
+      <p class="" style="font-family: Verdana, Geneva, Tahoma, sans-serif ;">Achieve the dream of becoming an expert cook</p>
+      <a href="./online-courses-html-template/index.html"><button  style="width: max-content;" class="btn bg-primary">school</button></a>
     </div>
  </div>
 <!-- end of header -->
@@ -49,12 +49,12 @@
       </div>
     </div>
     <div class="detail-box">
-      <h2 class="text-center">
+      <h2 class="text-center mt-3">
         About <span style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: green; text-shadow: 2px 2px black;">OKIN</span>
       </h2>
       <p>
-       <center><i> Okin brand offers a seamless online food ordering platform, We believe in making the process of ordering food both quick and enjoyable because we understand that indulging in good food is a pleasure. <br>
-        <a href="./resturant.html"><button class="bg-success">learn more</button></a> <br> <br>
+       <center><i style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"> Okin brand offers a seamless online food ordering platform, We believe in making the process of ordering food both quick and enjoyable because we understand that indulging in good food is a pleasure. <br>
+        <a href="./resturant.html"><button class="bg-success">learn more</button></a> <br> <br> <br> 
      <span style="font-weight: bold;">Okin Cullinary school</span> is another establishment of the Okin brand that was created with the sole purpose of teaching everyone of all age brackets and gender the the skills of cuisine expertise. <br>     
      <a href=""><button class="bg-primary">learn more</button></a>
       </p>
@@ -66,7 +66,7 @@
 <!-- qualities of okin section -->
 <div class="row mt-5">
   <div>
-    <h3 class="text-center mt-2" style=" font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">What We Are Known For:</h3>
+    <h3 class="text-center mt-5" style=" font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">What We Are Known For:</h3>
   </div>
   <div class="card mt-2 mx-auto" style="width: 18rem;">
     <img src="./img/images (26).jpeg" class="card-img-top" alt="...">
