--- a/resturant.html
+++ b/resturant.html
@@ -179,7 +179,7 @@
                         </h2>
                     </div>
                     <div class="pl-lg-5 ml-md-5">
-                        <p style="font-family: cursive;">What would i eat?" is an everyday struggle. <br> <br> With our affordable and specially curated meal plans, we've got the best answers for you. <br> <br>  Explore our wide range of menus perfect for your next event. We flawlessly cater to all events. <br>  <br>Always ready to serve you with a variety of healthy African street meals that leave your taste buds wanting more.</p>
+                        <p style="font-family: Verdana, Geneva, Tahoma, sans-serif ;">What would i eat?" is an everyday struggle. <br> <br> With our affordable and specially curated meal plans, we've got the best answers for you. <br> <br>  Explore our wide range of menus perfect for your next event. We flawlessly cater to all events. <br>  <br>Always ready to serve you with a variety of healthy African street meals that leave your taste buds wanting more.</p>
                         <h2 class="mt-5">SPECIAL MEALS</h2>
                         <div class="row">
                             <div class="col-4">
